完善纯CSS动画

--- a/interestingCSS/PureCSSMoustachedNanny/PureCSSMoustachedNanny.html
+++ b/interestingCSS/PureCSSMoustachedNanny/PureCSSMoustachedNanny.html
@@ -190,6 +190,16 @@
             <div class="bottle-3__dude-2"></div>
             <div class="bottle-3__dude-3"></div>
           </div>
+          <div class="dust-1"></div>
+          <div class="dust-2"></div>
+          <div class="dust-3"></div>
+          <div class="dust-4"></div>
+          <div class="dust-5"></div>
+          <div class="dust-6"></div>
+          <div class="dust-7"></div>
+          <div class="dust-8"></div>
+          <div class="dust-9"></div>
+          <div class="dust-10"></div>
         </div>
         <div class="mushroom-3">
           <div></div>
@@ -290,10 +300,10 @@
         </div>
         <div class="bottle-4">
           <div class="bottle-4__dude">
-            <div class="bottle-4__dude-head">
-              <div class="bottle-4__dude-hair-1"></div>
-              <div class="bottle-4__dude-hair-2"></div>
-              <div class="bottle-4__dude-hair-3"></div>
+            <div class="bottle-4__dude--head">
+              <div class="bottle-4__dude--hair1"></div>
+              <div class="bottle-4__dude--hair2"></div>
+              <div class="bottle-4__dude--hair3"></div>
             </div>
           </div>
         </div>
